# Bassera

./: README.md
.claude/: settings.json
Bank-API/: data.json  generated_ledger.json  genrate.py
Bassera-Core/: .env  next.config.js  package-lock.json  package.json  requirements.txt  seed.py  tailwind.config.js  vercel.json
Bassera-Core/api/: index.py
Bassera-Core/app/: globals.css  layout.tsx  page.tsx
Bassera-Core/docs/: generate.py  openapi.json  openapi.yaml
Bassera-Core/lib/: api.ts  constants.ts  db.py  types.ts
Bassera_Hybrid_Forecasting_System/: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  app.py  forecast_client.py  generated_ledger.json  requirements.txt  test_api.py
llm-suggestions/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
llm-suggestions/app/: main.py
llm-suggestions/app/api/v1/: router.py
llm-suggestions/app/api/v1/endpoints/: health.py  suggestions.py
llm-suggestions/app/core/: config.py  exceptions.py  logging.py
llm-suggestions/app/models/: request.py  response.py  transaction.py
llm-suggestions/app/services/: ai_engine.py  prompt_builder.py  transaction_analyzer.py
llm-suggestions/app/utils/: formatters.py  validators.py
llm-suggestions/docs/: api_reference.md  architecture.md
llm-suggestions/scripts/: migrate_shared_key.py  run_dev.sh  seed_mock_data.py
llm-suggestions/tests/: conftest.py
llm-suggestions/tests/integration/: test_suggestions_endpoint.py
llm-suggestions/tests/unit/: test_prompt_builder.py  test_transaction_analyzer.py  test_validators.py
(+90 files in other folders)
